--- a/app/src/main/res/layout/activity_game_preferences.xml
+++ b/app/src/main/res/layout/activity_game_preferences.xml
@@ -418,6 +418,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/add"
+                            android:visibility="gone"
                             app:icon="@drawable/ic_add"
                             style="@style/Widget.Material3.Button.TonalButton.Icon"/>
                     </LinearLayout>
@@ -486,6 +487,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/add"
+                            android:visibility="gone"
                             app:icon="@drawable/ic_add"
                             style="@style/Widget.Material3.Button.TonalButton.Icon"/>
                     </LinearLayout>
@@ -525,6 +527,7 @@
 
     <!-- Bottom Action Bar -->
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/bottomActionBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
