--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_star"
+        android:icon="@drawable/ic_home"
         android:title="@string/nav_home" />
 
     <item
@@ -12,7 +12,7 @@
 
     <item
         android:id="@+id/gamePrefsFragment"
-        android:icon="@drawable/ic_language"
+        android:icon="@drawable/ic_game"
         android:title="@string/nav_game_prefs" />
 
     <item
