--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -53,4 +53,11 @@
         <item name="android:windowEnterAnimation">@anim/fade_in_smooth</item>
         <item name="android:windowExitAnimation">@anim/fade_out_smooth</item>
     </style>
+    
+    <!-- Bottom Navigation Active Indicator Style - WhatsApp like -->
+    <style name="App.BottomNav.ActiveIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">?attr/colorPrimaryContainer</item>
+        <item name="android:width">64dp</item>
+        <item name="android:height">32dp</item>
+    </style>
 </resources>
