--- a/app/src/main/res/drawable/ic_redo.xml
+++ b/app/src/main/res/drawable/ic_redo.xml
@@ -5,8 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="?attr/colorOnSurface"
-        android:pathData="M13,3a9,9 0 1,0 9,9h-2a7,7 0 1,1 -7,-7v3l4,-4 -4,-4v3zM12,8v5l4.28,2.54 0.72,-1.21 -3.5,-2.08V8z" />
+        android:fillColor="@android:color/white"
+        android:pathData="M18.4,10.6C16.55,9 14.15,8 11.5,8c-4.65,0 -8.58,3.03 -9.96,7.22L3.9,16c1.05,-3.19 4.05,-5.5 7.6,-5.5 1.95,0 3.73,0.72 5.12,1.88L13,16h9V7l-3.6,3.6z" />
 </vector>
-
-
