--- a/app/src/main/res/drawable/bg_current_settings.xml
+++ b/app/src/main/res/drawable/bg_current_settings.xml
@@ -5,5 +5,5 @@
     <corners android:radius="12dp"/>
     <stroke
         android:width="1dp"
-        android:color="?attr/colorOutline"/>
+        android:color="#808080"/>
 </shape>
