--- a/app/src/main/res/drawable/bg_setting_modified_fill.xml
+++ b/app/src/main/res/drawable/bg_setting_modified_fill.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorTertiaryContainer" />
+            <solid android:color="#808080" />
             <corners android:radius="12dp" />
         </shape>
     </item>
@@ -10,7 +10,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="2dp"
-                android:color="?attr/colorTertiary" />
+                android:color="#808080" />
             <corners android:radius="12dp" />
         </shape>
     </item>
