--- a/app/src/main/res/drawable/ic_bolt.xml
+++ b/app/src/main/res/drawable/ic_bolt.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:tint="#808080">
     <path
         android:fillColor="@android:color/white"
         android:pathData="M13,3l-4,9h11l-4,9 1,-7h-4l1,-7z"/>
